--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DROITS DE L'HOMME</title>
-	<link rel="icon" href="https://zupimages.net/up/20/36/knmi.png" type="image/gif" sizes="16x16">
+	<link rel="icon" href="https://zupimages.net/up/20/29/knfi.png" type="image/gif" sizes="16x16">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<!----------- SCRIPTS ------------->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -15,13 +15,13 @@
 		<!-------- Navbar GLOBALE------->
 	<ul class="nav nav-pills navglob">
 	  <li class="nav-item nav-itemglob">
-	    <img src="https://zupimages.net/up/20/36/knmi.png" width="150" height="150">
+	    <img src="https://zupimages.net/up/20/29/knfi.png" width="150" height="150">
 	  </li>
-	  <li class="nav-item nav-itemglob"><h1><a href="https://johnrice0174.github.io/omega.gouv.fr/"><b>M</b>ILIOGOUV</a></h1></li>
+	  <li class="nav-item nav-itemglob"><h1><a href="https://johnrice0174.github.io/omega.gouv.fr/"><b>Ω</b>MÉGOUV</a></h1></li>
 	  <li class="nav-item nav-itemglob dropdown">
 	    <a class="nav-link nav-linkglob dropdown-toggle dropd-glob" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Toute La Législation</a>
 	    <div class="dropdown-menu">
-	      <a class="dropdown-item" href="https://johnrice0174.github.io/omega.droitsdelhomme.gouv.fr/">Droits de l'Homme</a>
+	      <a class="dropdown-item" href="#">Droits de l'Homme</a>
 	      <a class="dropdown-item" href="#">Code Pénal</a>
 	      <a class="dropdown-item" href="https://johnrice0174.github.io/omega.procedurepenale.gouv.fr/">Code de Procédure Pénale</a>
 	      <a class="dropdown-item" href="https://johnrice0174.github.io/omega.securiteinterieur.gouv.fr/">Code de la Sécurité Intérieure</a>
@@ -280,19 +280,16 @@
 
 	<!------------------- STYLE ---------------------->
 	<style type="text/css">
-    body {
-      background-color: grey;
-    }
 		/*------ HEADER NAV GLOB-------*/
 		@import url('https://fonts.googleapis.com/css2?family=Candal&display=swap');
 		.navglob {
-			background-color: #992600;
+			background-color: purple;
 		}
 		.nav-linkglob {
 			color: white;
 		}
 		.nav-linkglob:hover{
-			color: gold;
+			color: blue;
 		}
 		.nav-itemglob {
 			margin-right: 5%;
@@ -306,7 +303,7 @@
 			color: white;
 		}	
 		.nav-itemglob > h1 > a:hover{
-			color: gold;
+			color: teal;
 			text-decoration: none;
 		}
 		.navt {
